# cma-rust

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer.json
docker/: ci.Dockerfile  dev.Dockerfile  (+4 more)
explor-auth/: .env.example  API_DOCUMENTATION.md  Cargo.toml  SWAGGER_GUIDE.md
explor-auth/src/: config.rs  db.rs  main.rs  model.rs
explor-auth/src/authentication/: control.rs  mod.rs  model.rs  service.rs  utils.rs
explor-auth/src/common/: mod.rs  response.rs
explor-auth/src/documents/: control.rs  data_provider.rs  db.rs  mod.rs  model.rs  response.rs  service.rs
explor-auth/src/middleware/: auth.rs
explor-auth/test-auth/: README.md  _theme-colors.scss  angular.json  package-lock.json  package.json
explor-auth/test-auth/src/: index.html  styles.scss
explor-auth/test-auth/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
explor-auth/test-auth/src/app/home/: routes.ts
explor-auth/test-auth/src/app/home/main.page/: main.page.ts
explor-auth/test-auth/src/app/login/: index.ts  routes.ts
explor-auth/test-auth/src/app/login/login.page/: login.page.html  login.page.scss  login.page.ts
explor-auth/test-auth/src/app/security/: auth-guard.ts  auth-interceptor.ts  auth.ts  index.ts  provider.ts
explor-auth/test-auth/src/app/shared/: breakpoint.ts  theme.ts
explor-auth/test-auth/src/app/shared/main-layout/: index.ts  main-layout.html  main-layout.scss  main-layout.ts
explor-auth/test-auth/src/styles/: _card.scss  _sidenav.scss  _theme-colors.scss  _theme_material_3.scss  _toolbar.scss  _utils.scss
(+94 files in other folders)
