[package]
name = "explor-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
actix-cors = "0.7.1"

uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
mongodb = "3.3.0"
futures-util = "0.3"
dotenv = "0.15"
